--- a/package.json
+++ b/package.json
@@ -2,11 +2,20 @@
   "name": "react-project",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "editorconfig": "editorconfig-checker",
+    "dev": "webpack-dev-server --mode=development --open",
+    "production": "webpack --mode production",
+    "watch": "webpack --watch --mode=development"
+  },
   "author": "Vulong Development",
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "vulong-editorconfig": "^1.0.2",
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^8.2.5",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
